--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,2 +1,18 @@
-.App {
+.top-bar {
+    background-color:rgb(58, 96, 179);
+}
+
+.contact-icon{
+    font-weight: 600;
+    color: #fff;
+    font-size: 16px;
+    padding: 16px 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.GT-logo{
+    width: 200px;
+    margin: 0px 0 0 0;
 }
